network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "defaultValue": "CZ-NL-VNET-P-CITODO-001",
      "type": "string",
      "metadata": {
        "description": "The name of the Virtual Network the VMs will be deployed to later. You'll need to provide this name when deploying on of the VMs."
      }
    },
    "vnetAddressSpace": {
      "defaultValue": "10.1.0.0/24",
      "type": "string",
      "metadata": {
        "description": "The address space of the Virtual Network. Defaults to 10.1.0.0/24 (256 IP addresses)."
      }
    },
    "subnetName": {
      "defaultValue": "CZ-NL-SN-DMZ1",
      "type": "string",
      "metadata": {
        "description": "The name of the subnet the VMs will be deployed to later. You'll need to provide this name when deploying on of the VMs."
      }
    },
    "subnetAddressSpace": {
      "defaultValue": "10.1.0.0/24",
      "type": "string",
      "metadata": {
        "description": "The address space of the subnet. Defaults to 10.1.0.0/24 (256 IP addresses)."
      }
    },
    "networkSecurityGroup": {
      "defaultValue": "CZ-NL-NSG-DMZ1",
      "type": "string",
      "metadata": {
        "description": "The name of the Network Security Group to be associated to the subnet above defining allowed and disallowed traffic from/to the subnet and its VMs."
      }
    }
  },
  "variables": {
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroup')]",
      "apiVersion": "2017-06-01",
      "location": "[resourceGroup().location]",
      "scale": null,
      "properties": {
        "securityRules": [
          {
            "name": "AllowSshInBound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowHttpInBound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowHttpInboundToTools",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "8081",
              "sourceAddressPrefix": "[parameters('vnetAddressSpace')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "name": "[parameters('vnetName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[resourceGroup().location]",
      "apiVersion": "2016-03-30",
      "tags": {
        "displayName": "[parameters('vnetName')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetAddressSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup'))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup'))]"
      ]
    }
  ],
  "outputs": {
  }
}
